--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.26)
 project(DemoApp)
 
+set(CPACK_PACKAGE_VERSION_MAJOR "1")
+set(CPACK_PACKAGE_VERSION_MINOR "0")
+set(CPACK_PACKAGE_VERSION_PATCH "1")
+
 # Define install paths
 set(INSTALL_BIN_DIR bin)
 set(INSTALL_LIB_DIR lib)
@@ -27,7 +31,8 @@ install(FILES LICENSE.txt README.md DESTINATION doc COMPONENT Docs)
 set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.txt")
 
 set(CPACK_PACKAGE_NAME "DemoApp")
-set(CPACK_PACKAGE_VERSION "1.0.0")
+set(CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Demo Application for Packaging with CPack")
 set(CPACK_PACKAGE_VENDOR "Demo Company")
 set(CPACK_PACKAGE_CONTACT "demo@example.com")
 # set(CPACK_GENERATOR "TGZ")  # Or use ZIP, DEB, RPM, NSIS, etc.
